Fix some math, better handle switching targets, alignment against coords

--- a/src/ids-popup/ids-popup.scss
+++ b/src/ids-popup/ids-popup.scss
@@ -7,6 +7,7 @@
 }
 
 .ids-popup {
+  background-color: #fff;
   border: 1px solid #2ac371;
   position: fixed;
 
